--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- Custom Styles Media Querys -->
-  <link rel="stylesheet" href="mediaQuerys.css">
+  <!-- <link rel="stylesheet" href="mediaQuerys.css"> -->
 
   <!--aos js. -->
 
@@ -61,7 +61,7 @@
         <li class="navbar__link navbar__link--activo"> <a href="#header">inicio</a> </li>
         <li class="navbar__link"><a href="#dividida">nosotros</a></li>
         <li class="navbar__link"><a href="#mision">mision</a></li>
-        <li class="navbar__link"><a href="#multimedia">multimedia</a></li>
+        <li class="navbar__link"><a href="#precursores">multimedia</a></li>
         <li class="navbar__link"><a href="#actividades">actividades</a></li>
         <li class="navbar__link"><a href="#galeria">galeria</a></li>
         <li class="navbar__link"><a href="#contacto">contacto</a></li>
@@ -248,6 +248,61 @@
           voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
           consequatur.
 
+          harum quo exercitationem natus quae! Voluptatem vero minima illum, quos itaque nemo dolore impedit sit amet
+          praesentium sequi laudantium nisi omnis porro laboriosam atque recusandae harum possimus voluptas accusantium
+          dolor eos, culpa placeat repellat! Quia, consequatur! Consequatur nihil ut dolorem sapiente molestiae modi
+          illum
+          impedit? Voluptate illum ipsam similique! Hic, suscipit?
+
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate consequatur laudantium mollitia
+          ratione exercitationem. Eius, iure odio. Repudiandae eveniet delectus reprehenderit nostrum ipsum eum
+          voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
+          consequatur.
+
+          harum quo exercitationem natus quae! Voluptatem vero minima illum, quos itaque nemo dolore impedit sit amet
+          praesentium sequi laudantium nisi omnis porro laboriosam atque recusandae harum possimus voluptas accusantium
+          dolor eos, culpa placeat repellat! Quia, consequatur! Consequatur nihil ut dolorem sapiente molestiae modi
+          illum
+          impedit? Voluptate illum ipsam similique! Hic, suscipit?
+
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate consequatur laudantium mollitia
+          ratione exercitationem. Eius, iure odio. Repudiandae eveniet delectus reprehenderit nostrum ipsum eum
+          voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
+          consequatur.
+
+          praesentium sequi laudantium nisi omnis porro laboriosam atque recusandae harum possimus voluptas accusantium
+          dolor eos, culpa placeat repellat! Quia, consequatur! Consequatur nihil ut dolorem sapiente molestiae modi
+          illum
+          impedit? Voluptate illum ipsam similique! Hic, suscipit?
+
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate consequatur laudantium mollitia
+          ratione exercitationem. Eius, iure odio. Repudiandae eveniet delectus reprehenderit nostrum ipsum eum
+          voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
+          consequatur.
+
+          harum quo exercitationem natus quae! Voluptatem vero minima illum, quos itaque nemo dolore impedit sit amet
+          praesentium sequi laudantium nisi omnis porro laboriosam atque recusandae harum possimus voluptas accusantium
+          dolor eos, culpa placeat repellat! Quia, consequatur! Consequatur nihil ut dolorem sapiente molestiae modi
+          illum
+          impedit? Voluptate illum ipsam similique! Hic, suscipit?
+
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate consequatur laudantium mollitia
+          ratione exercitationem. Eius, iure odio. Repudiandae eveniet delectus reprehenderit nostrum ipsum eum
+          voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
+          consequatur.
+
+          harum quo exercitationem natus quae! Voluptatem vero minima illum, quos itaque nemo dolore impedit sit amet
+          praesentium sequi laudantium nisi omnis porro laboriosam atque recusandae harum possimus voluptas accusantium
+          dolor eos, culpa placeat repellat! Quia, consequatur! Consequatur nihil ut dolorem sapiente molestiae modi
+          illum
+          impedit? Voluptate illum ipsam similique! Hic, suscipit?
+
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate consequatur laudantium mollitia
+          ratione exercitationem. Eius, iure odio. Repudiandae eveniet delectus reprehenderit nostrum ipsum eum
+          voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
+          consequatur.
+
+
         </p>
       </div>
     </section>
@@ -283,64 +338,48 @@
 
     <!--Precursores (Videos de Youtube)-->
 
-    <aside class="aside" id="multimedia">
+    <aside class="aside" id="precursores">
+
+
+      <!-- Precursores -->
       <div class="aside__texto">
+        <i class="fa-solid fa-headphones-simple"></i>
         <h2 class="aside__titulo">Precursores</h2>
         <h3 class="aside__subtitulo">escuchalos! 🎹 </h3>
+        <div class="aside__btn">
+          <a href="precursores.html">
+            <input type="button" value="VER MÁS">
+          </a>
+        </div>
       </div>
 
-
-      <div class="aside__iframe">
-        <iframe loading="lazy" src="https://www.youtube.com/embed/s2sFTTzpoQg" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-
-        <iframe loading="lazy" src="https://www.youtube.com/embed/H-dO9ptoajY" title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-
-      <!-- Precursores Podcast -->
-
+      <!-- Podcast -->
       <div class="aside__texto2">
+        <i class="fa-solid fa-microphone-lines"></i>
         <h2 class="aside__titulo2">Podcast</h2>
         <h3 class="aside__subtitulo2">escuchalos! 🎧 </h3>
-      </div>
-
-      <div class="aside__iframe aside__iframe--podcast">
-        <iframe style="border-radius:12px"
-          src="https://open.spotify.com/embed/track/7bcC6wus84h6Vmy2REacVA?utm_source=generator" width="80%" height="80"
-          frameBorder="0" allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-        </iframe>
-
-        <iframe style="border-radius:12px"
-          src="https://open.spotify.com/embed/track/1Zy7K92fCt1CPKkJbtlMZp?utm_source=generator" width="80%" height="80"
-          frameBorder="0" allowfullscreen=""
-          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-        </iframe>
-      </div>
-
-      <div class="aside__reuniones">
-        <div class="aside__texto3">
-          <h2 class="aside__titulo3">Ultimas reuniones</h2>
-          <h3 class="aside__subtitulo3">miralas! 👇 </h3>
+        <div class="aside__btn">
+          <a href="podcast.html">
+            <input type="button" value="VER MÁS">
+          </a>
         </div>
+      </div>
 
+      <!-- Reuniones -->
+      <div class="aside__texto3">
+        <i class="fa-solid fa-dove"></i>
+        <h2 class="aside__titulo3">Reuniones</h2>
+        <h3 class="aside__subtitulo3">miralas! 👇 </h3>
         <div class="aside__btn">
           <a href="reuniones.html">
             <input type="button" value="VER MÁS">
           </a>
         </div>
-
-        <div class="aside__imagen">
-          <img src="img/277301390_5064857213583975_763771797792303916_n.jpg" alt="imagen reunion" class="aside--img">
-          <img src="img/277719901_5064857200250643_4054100734702023779_n.jpg" alt="imagen reunion" class="aside--img">
-        </div>
-
       </div>
+
+
+
+
     </aside>
 
 
