--- a/index.html
+++ b/index.html
@@ -160,21 +160,34 @@
         <h2 class="left__titulo--dos">Nosotros</h2>
         <h4 class="left__tituloSub--dos">Tristán Suárez ✋🤚</h4>
         <p class="left__parrafo--dos">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
-          odio
-          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero
-          magnam
-          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
-          placeat
+          Cada persona que llega a la comunidad es desafiada a entregarse a Jesús y dejar que Él sea su Señor.
+          Esto solo es posible por lo que Dios hizo con el hombre a través de Jesús. Nuestro nuevo nacimiento viene por
+          un pacto.
+          Todo lector de la Biblia comprenderá que Dios, desde la creación del hombre, se ha relacionado con él, a
+          través de pactos. Hoy todos los cristianos han estado involucrados bajo el nuevo pacto hecho por Jesús en la
+          cruz ( Mateo 26-28).
+          Será difícil concebir la vida de la comunidad, sin vivir a la sombra de quienes pactan con nosotros para
+          siempre.
+          Los pastores de nuestra comunidad recibieron la luz, bajo el concepto de la Palabra de Dios, de hacer parte
+          del diario vivir de la iglesia, las verdades de la Alianza. Este hecho de Dios con nosotros sería
+          escaso si no se extendiera a todos los aspectos de nuestra vida.
+          Dios se ha desbordado en su expresión de amor y lo ha extendido , a la formación de una familia, un cuerpo,
+          su iglesia, que nace por mediación de Jesucristo en la nueva alianza (1 P 2, 4-10) y que es el único capaz
+          de acabar con todo otro tipo de pactos que se han hecho.
+          La iglesia, los que la formamos, no podemos vivir fuera de la bendición para disfrutar de todos los logros que
+          esto representa para el caminar diario. Como solidificando nuestras relaciones, limpiándolas para que sean
+          cristalinas, guardando cuidadosamente la unidad del Espíritu .
+          Esto exige una conducta voluntaria que se comprometan a “mantener a pedido”, cuidar con
+          cuidado , no dejar fisuras a la Unidad.
+          Sólo así se edifica un cuerpo, o mejor dicho, crece un cuerpo, donde la cabeza es Cristo (Efesios 4:15) y se
+          establece claramente la delegación de autoridad. Dios nos enseña cómo mantener el cuerpo unido ayudándonos
+          unos a otros (Efesios 4:16).
 
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
-          odio
 
-          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
-          placeat
 
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
-          odio
+
+
+
 
         </p>
       </div>
@@ -230,27 +243,39 @@
     <section class="mision" id="mision">
       <div class="mision__texto">
         <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
-        <h2 class="mision__titulo">Misión y visión</h2>
+        <h2 class="mision__titulo">La Visión</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
         <p class="mision__parrafo">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
-          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
-          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
-          placeat
-          harum quo exercitationem natus quae! Voluptatem vero minima illum, quos itaque nemo dolore impedit sit amet
-          praesentium sequi laudantium nisi omnis porro laboriosam atque recusandae harum possimus voluptas accusantium
-          dolor eos, culpa placeat repellat! Quia, consequatur! Consequatur nihil ut dolorem sapiente molestiae modi
-          illum
-          impedit? Voluptate illum ipsam similique! Hic, suscipit?
+          Una Iglesia que abrigue a todos los que se acerquen a ella con un fuerte y anifiesto interés en el área
+          social. <br>
+          Una Iglesia formadora de líderes, que bendiga al pueblo de Dios nacional e internacional. <br>
+          Una Iglesia fundamentada en el estudio de la Palabra de Dios. <br>
+          Una Iglesia abierta a todos los dones espirituales, en armonía y obediencia a la Palabra de Dios. <br>
+          Una Iglesia abierta a compartir la Palabra, con líderes de otras líneas teológicas, disfrutando de la comunión
+          y respetando nuestras diferencias. <br>
+          Una Iglesia auxiliadora de otras congregaciones en crisis o con dificultades. <br>
+          Una Iglesia con un fuerte énfasis en la adoración a Dios. <br>
+          Una Iglesia con ministerios centrales funcionando a pleno, reuniendo en ellos el modelo del Ministerio de
+          Jesucristo (Evangelismo, Incorporación, Calidad de Vida, Adoración, Enseñanza, Obra Social, Administración y
+          Finanzas). <br>
+          Una Iglesia con un pleno desarrollo de las edades para una pastoral cercana (de niños a abuelos). <br>
+          Una Iglesia con un liderazgo de primera línea "de amigos en Cristo", que se conocen profundamente, dispuestos
+          a sostenerse entre ellos en los momentos más dificiles, que trabajan con un verdadero pacto de amor, sin
+          buscar lo suyo propio, sin egoismos, teniendo como base la transparencia de sus acciones e inquietudes y bajo
+          la cobertura del Espíritu Santo, en un marco de respeto y perdón. <br>
+          Una Iglesia con una economia clara y finanzas transparentes, abierta a cualquier área del liderazgo comprometido, para evitar sospechas y disfrutar del crecimiento que Dios no da. <br>
+          Una Iglesia con un llamado a las misiones locales e internacionales, con el anhelo prioritario de plantar iglesias en cada ciudad donde Dios lo muestre y confirme. <br>
+          Una Iglesia que predica, proclama y trabaja para la verdadera unidad del Cuerpo de Cristo, en armonía con iglesias hermanas. <br>
+          Una Iglesia de pacto, defensora de la comunión entre los hermanos, declarando como único adversario el diablo. <br>
+          Una Iglesia que anhela armonizar con el propósito del Señor, tomando decisiones en el temor de Dios, sabiendo que Él juzgará las intensiones de nuestro corazón. <br>
 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate consequatur laudantium mollitia
-          ratione exercitationem. Eius, iure odio. Repudiandae eveniet delectus reprehenderit nostrum ipsum eum
-          voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
-          consequatur.
+          Dios nos bendiga!
 
-          
 
-          
+
+
+
+
 
 
         </p>
