--- a/index.html
+++ b/index.html
@@ -117,10 +117,8 @@
     <!--Rehma-->
 
     <article class="article" id="rehma">
-
+      <!-- Card -->
       <div class="article__card">
-
-
         <svg viewBox="0 0 402 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <path fill="rgba(218, 224, 230, 1)"
             d="M 0 325 L -11.428571462631226 373.4285583496094 L -11.428571462631226 0 L 0 0 Z" stroke-width="0">
@@ -147,6 +145,13 @@
         </div>
         <p class="article__pie">Palabra Rehma 2022</p>
       </div>
+      <!-- flecha abajo -->
+      <div class="flecha__abajo">
+        <a href="#dividida">
+          <i class="fa-solid fa-angle-down"></i>
+        </a>
+      </div>
+
     </article>
 
 
@@ -263,11 +268,16 @@
           a sostenerse entre ellos en los momentos más dificiles, que trabajan con un verdadero pacto de amor, sin
           buscar lo suyo propio, sin egoismos, teniendo como base la transparencia de sus acciones e inquietudes y bajo
           la cobertura del Espíritu Santo, en un marco de respeto y perdón. <br>
-          Una Iglesia con una economia clara y finanzas transparentes, abierta a cualquier área del liderazgo comprometido, para evitar sospechas y disfrutar del crecimiento que Dios no da. <br>
-          Una Iglesia con un llamado a las misiones locales e internacionales, con el anhelo prioritario de plantar iglesias en cada ciudad donde Dios lo muestre y confirme. <br>
-          Una Iglesia que predica, proclama y trabaja para la verdadera unidad del Cuerpo de Cristo, en armonía con iglesias hermanas. <br>
-          Una Iglesia de pacto, defensora de la comunión entre los hermanos, declarando como único adversario el diablo. <br>
-          Una Iglesia que anhela armonizar con el propósito del Señor, tomando decisiones en el temor de Dios, sabiendo que Él juzgará las intensiones de nuestro corazón. <br>
+          Una Iglesia con una economia clara y finanzas transparentes, abierta a cualquier área del liderazgo
+          comprometido, para evitar sospechas y disfrutar del crecimiento que Dios no da. <br>
+          Una Iglesia con un llamado a las misiones locales e internacionales, con el anhelo prioritario de plantar
+          iglesias en cada ciudad donde Dios lo muestre y confirme. <br>
+          Una Iglesia que predica, proclama y trabaja para la verdadera unidad del Cuerpo de Cristo, en armonía con
+          iglesias hermanas. <br>
+          Una Iglesia de pacto, defensora de la comunión entre los hermanos, declarando como único adversario el diablo.
+          <br>
+          Una Iglesia que anhela armonizar con el propósito del Señor, tomando decisiones en el temor de Dios, sabiendo
+          que Él juzgará las intensiones de nuestro corazón. <br>
 
           Dios nos bendiga!
 
