--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="loader__imagen">
       <img src="img/Logo1.jpg" alt="">
     </div>
- 
+
     <div class="loader__texto">
       <span>El Encuentro - Tristán Suárez</span>
     </div>
@@ -177,23 +177,6 @@
           Los pastores de nuestra comunidad recibieron la luz, bajo el concepto de la Palabra de Dios, de hacer parte
           del diario vivir de la iglesia, las verdades de la Alianza. Este hecho de Dios con nosotros sería
           escaso si no se extendiera a todos los aspectos de nuestra vida.
-          Dios se ha desbordado en su expresión de amor y lo ha extendido , a la formación de una familia, un cuerpo,
-          su iglesia, que nace por mediación de Jesucristo en la nueva alianza (1 P 2, 4-10) y que es el único capaz
-          de acabar con todo otro tipo de pactos que se han hecho.
-          La iglesia, los que la formamos, no podemos vivir fuera de la bendición para disfrutar de todos los logros que
-          esto representa para el caminar diario. Como solidificando nuestras relaciones, limpiándolas para que sean
-          cristalinas, guardando cuidadosamente la unidad del Espíritu .
-          Esto exige una conducta voluntaria que se comprometan a “mantener a pedido”, cuidar con
-          cuidado , no dejar fisuras a la Unidad.
-          Sólo así se edifica un cuerpo, o mejor dicho, crece un cuerpo, donde la cabeza es Cristo (Efesios 4:15) y se
-          establece claramente la delegación de autoridad. Dios nos enseña cómo mantener el cuerpo unido ayudándonos
-          unos a otros (Efesios 4:16).
-
-
-
-
-
-
 
         </p>
       </div>
@@ -218,24 +201,20 @@
 
       <div class="right__textoDos" data-aos="fade-right">
 
-        <h2 class="right__titulo--dos">Nuestros Pastores</h2>
-        <h4 class="right__tituloSub--dos">Tristán Suárez 👫</h4>
+        <!-- <h2 class="right__titulo--dos">Nuestros Pastores</h2>
+        <h4 class="right__tituloSub--dos">Tristán Suárez 👫</h4> -->
         <p class="right__parrafo--dos">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
-          odio
-          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero
-          magnam
-          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
-          placeat
-
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
-          odio
-
-          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
-          placeat
-
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat
-          odio
+          Dios se ha desbordado en su expresión de amor y lo ha extendido , a la formación de una familia, un cuerpo,
+          su iglesia, que nace por mediación de Jesucristo en la nueva alianza (1 P 2, 4-10) y que es el único capaz
+          de acabar con todo otro tipo de pactos que se han hecho.
+          La iglesia, los que la formamos, no podemos vivir fuera de la bendición para disfrutar de todos los logros que
+          esto representa para el caminar diario. Como solidificando nuestras relaciones, limpiándolas para que sean
+          cristalinas, guardando cuidadosamente la unidad del Espíritu .
+          Esto exige una conducta voluntaria que se comprometan a “mantener a pedido”, cuidar con
+          cuidado , no dejar fisuras a la Unidad.
+          Sólo así se edifica un cuerpo, o mejor dicho, crece un cuerpo, donde la cabeza es Cristo (Efesios 4:15) y se
+          establece claramente la delegación de autoridad. Dios nos enseña cómo mantener el cuerpo unido ayudándonos
+          unos a otros (Efesios 4:16).
 
         </p>
 
@@ -251,6 +230,7 @@
         <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
         <h2 class="mision__titulo">La Visión</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
+        <img src="img/alabanza4.jpg" class="mision__img" alt="">
         <p class="mision__parrafo">
           Una Iglesia que abrigue a todos los que se acerquen a ella con un fuerte y anifiesto interés en el área
           social. <br>
@@ -281,13 +261,6 @@
           que Él juzgará las intensiones de nuestro corazón. <br>
 
           Dios nos bendiga!
-
-
-
-
-
-
-
 
         </p>
       </div>
