--- a/index.html
+++ b/index.html
@@ -230,7 +230,6 @@
         <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
         <h2 class="mision__titulo">La Visión</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
-        <img src="img/alabanza4.jpg" class="mision__img" alt="">
         <p class="mision__parrafo">
           Una Iglesia que abrigue a todos los que se acerquen a ella con un fuerte y anifiesto interés en el área
           social. <br>
@@ -263,6 +262,10 @@
           Dios nos bendiga!
 
         </p>
+      </div>
+      <div class="mision__imagen" data-aos="fade-right">
+        <img src="img/iglesia.jpg" alt="">
+        <img src="img/iglesia3.jpg" alt="">
       </div>
     </section>
 
