--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
         </p>
       </div>
-      <div class="mision__imagen" data-aos="fade-right">
+      <div class="mision__imagen">
         <img src="img/iglesia.jpg" alt="">
         <img src="img/iglesia3.jpg" alt="">
       </div>
