--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
 
     <!--Barra de navegacion-->
-    <nav class="navbar">
+    <nav class="navbar" id="navbar">
 
       <a href="#header">
         <img loading="lazy" src="img/logo.jpg" class="navbar__logo" alt="">
@@ -264,8 +264,9 @@
         </p>
       </div>
       <div class="mision__imagen">
-        <img src="img/iglesia.jpg" alt="">
-        <img src="img/iglesia3.jpg" alt="">
+        <img src="img/collage.png" alt="">
+        
+    
       </div>
     </section>
 
@@ -614,6 +615,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- Project -->
+  <script src="scroll.js"></script>
   <script src="main.js"></script>
 
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
