--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         </p>
       </div>
       <div class="mision__imagen">
-        <img src="img/collage.png" alt="">
+        <img src="img/collage2.png" alt="">
         
     
       </div>
