--- a/index.html
+++ b/index.html
@@ -227,6 +227,14 @@
 
     <section class="mision" id="mision">
       <div class="mision__texto">
+        <svg viewBox="0 0 402 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <path fill="rgba(218, 224, 230, 1)"
+            d="M 0 325 L -11.428571462631226 373.4285583496094 L -11.428571462631226 0 L 0 0 Z" stroke-width="0">
+          </path>
+          <path fill="rgba(218, 224, 230, 1)"
+            d="M -12.428571462631226 373.4285583496094 L 402 0 L 402 0 L -12.428571462631226 0 Z" stroke-width="0">
+          </path>
+        </svg>
         <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
         <h2 class="mision__titulo">La Visión</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
@@ -258,15 +266,17 @@
           <br>
           Una Iglesia que anhela armonizar con el propósito del Señor, tomando decisiones en el temor de Dios, sabiendo
           que Él juzgará las intensiones de nuestro corazón. <br>
+          <br>
+          <strong>Dios nos bendiga!</strong>
 
-          Dios nos bendiga!
+
 
         </p>
       </div>
       <div class="mision__imagen">
         <img src="img/collage2.png" alt="">
-        
-    
+
+
       </div>
     </section>
 
