--- a/index.html
+++ b/index.html
@@ -463,28 +463,32 @@
     <!-- Swiper -->
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-     
         <div class="swiper-slide">
-          <div class="swiper-avatar">
-            <img src="img/javier.jpg" alt="">
-          </div>
           <div class="swiper-texto">
+            <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
+              autem. adipisicing elit. Esse, sapiente!</p>
+            <div class="swiper-avatar">
+              <img src="img/javier.jpg" alt="">
+            </div>
             <h2>Testimonios</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse, sapiente!</p>
-
+            <h3>Javier Corsi</h3>
           </div>
+
         </div>
 
         <div class="swiper-slide">
-          <div class="swiper-avatar">
-            <img src="img/javier.jpg" alt="">
-          </div>
           <div class="swiper-texto">
+            <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
+              autem. adipisicing elit. Esse, sapiente!</p>
+            <div class="swiper-avatar">
+              <img src="img/javier.jpg" alt="">
+            </div>
             <h2>Testimonios</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse, sapiente!</p>
-
+            <h3>Javier Corsi</h3>
           </div>
+
         </div>
+  
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
