--- a/index.html
+++ b/index.html
@@ -465,30 +465,31 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="swiper-texto">
+            <i class="fa-solid fa-quote-left"></i>
             <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
               autem. adipisicing elit. Esse, sapiente!</p>
             <div class="swiper-avatar">
-              <img src="img/javier.jpg" alt="">
+              <img src="img/cara.jpg" alt="">
             </div>
             <h2>Testimonios</h2>
-            <h3>Javier Corsi</h3>
+            <h3>Juan Esteban</h3>
           </div>
-
         </div>
 
         <div class="swiper-slide">
           <div class="swiper-texto">
+            <i class="fa-solid fa-quote-left"></i>
             <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
               autem. adipisicing elit. Esse, sapiente!</p>
             <div class="swiper-avatar">
-              <img src="img/javier.jpg" alt="">
+              <img src="img/cara.jpg" alt="">
             </div>
             <h2>Testimonios</h2>
-            <h3>Javier Corsi</h3>
+            <h3>Juan Esteban</h3>
           </div>
 
         </div>
-  
+
       </div>
       <div class="swiper-button-next"></div>
       <div class="swiper-button-prev"></div>
