--- a/index.html
+++ b/index.html
@@ -463,32 +463,47 @@
     <!-- Swiper -->
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
+        
         <div class="swiper-slide">
           <div class="swiper-texto">
+            <img src="img/cara.jpg" alt="">
+            <h2>Testimonios</h2>
+            <h3>Juan Esteban</h3>
             <i class="fa-solid fa-quote-left"></i>
             <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
               autem. adipisicing elit. Esse, sapiente!</p>
-            <div class="swiper-avatar">
-              <img src="img/cara.jpg" alt="">
+            <div class="swiper-footer">
             </div>
-            <h2>Testimonios</h2>
-            <h3>Juan Esteban</h3>
           </div>
         </div>
 
         <div class="swiper-slide">
           <div class="swiper-texto">
+            <img src="img/cara.jpg" alt="">
+            <h2>Testimonios</h2>
+            <h3>Juan Esteban</h3>
             <i class="fa-solid fa-quote-left"></i>
             <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
               autem. adipisicing elit. Esse, sapiente!</p>
-            <div class="swiper-avatar">
-              <img src="img/cara.jpg" alt="">
+            <div class="swiper-footer">
             </div>
+          </div>
+        </div>
+
+        <div class="swiper-slide">
+          <div class="swiper-texto">
+            <img src="img/cara.jpg" alt="">
             <h2>Testimonios</h2>
             <h3>Juan Esteban</h3>
+            <i class="fa-solid fa-quote-left"></i>
+            <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
+              autem. adipisicing elit. Esse, sapiente!</p>
+            <div class="swiper-footer">
+            </div>
           </div>
-
         </div>
+
+
 
       </div>
       <div class="swiper-button-next"></div>
