--- a/index.html
+++ b/index.html
@@ -466,9 +466,22 @@
         
         <div class="swiper-slide">
           <div class="swiper-texto">
-            <img src="img/cara.jpg" alt="">
-            <h2>Testimonios</h2>
-            <h3>Juan Esteban</h3>
+            <img src="img/nadia 2.jpg" alt="">
+            <h2>Testimonios 💪</h2>
+            <h3>Nadia Saballa</h3>
+            <i class="fa-solid fa-quote-left"></i>
+            <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
+              autem. adipisicing elit. Esse, sapiente!</p>
+            <div class="swiper-footer">
+            </div>
+          </div>
+        </div>
+
+        <div class="swiper-slide">
+          <div class="swiper-texto">
+            <img src="img/seby.jpg" alt="">
+            <h2>Testimonios 💪</h2>
+            <h3>Sebastian Gallardo</h3>
             <i class="fa-solid fa-quote-left"></i>
             <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
               autem. adipisicing elit. Esse, sapiente!</p>
@@ -480,20 +493,7 @@
         <div class="swiper-slide">
           <div class="swiper-texto">
             <img src="img/cara.jpg" alt="">
-            <h2>Testimonios</h2>
-            <h3>Juan Esteban</h3>
-            <i class="fa-solid fa-quote-left"></i>
-            <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
-              autem. adipisicing elit. Esse, sapiente!</p>
-            <div class="swiper-footer">
-            </div>
-          </div>
-        </div>
-
-        <div class="swiper-slide">
-          <div class="swiper-texto">
-            <img src="img/cara.jpg" alt="">
-            <h2>Testimonios</h2>
+            <h2>Testimonios 💪</h2>
             <h3>Juan Esteban</h3>
             <i class="fa-solid fa-quote-left"></i>
             <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
