--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <ul class="navbar__item">
         <li class="navbar__link navbar__link--activo"> <a href="#header">inicio</a> </li>
         <li class="navbar__link"><a href="#dividida">nosotros</a></li>
-        <li class="navbar__link"><a href="#mision">mision</a></li>
+        <li class="navbar__link"><a href="#mision">vision</a></li>
         <li class="navbar__link"><a href="#precursores">multimedia</a></li>
         <li class="navbar__link"><a href="#actividades">actividades</a></li>
         <li class="navbar__link"><a href="#galeria">galeria</a></li>
@@ -230,14 +230,14 @@
 
     <section class="mision" id="mision">
       <div class="mision__texto">
-        <svg viewBox="0 0 402 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <!-- <svg viewBox="0 0 402 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
           <path fill="rgba(218, 224, 230, 1)"
             d="M 0 325 L -11.428571462631226 373.4285583496094 L -11.428571462631226 0 L 0 0 Z" stroke-width="0">
           </path>
           <path fill="rgba(218, 224, 230, 1)"
             d="M -12.428571462631226 373.4285583496094 L 402 0 L 402 0 L -12.428571462631226 0 Z" stroke-width="0">
           </path>
-        </svg>
+        </svg> -->
         <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
         <h2 class="mision__titulo">La Visión</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
@@ -277,9 +277,7 @@
         </p>
       </div>
       <div class="mision__imagen">
-        <img src="img/collage2.png" alt="">
-
-
+        <img src="img/fotos-triangulos.png" alt="">
       </div>
     </section>
 
