--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" href="resetPro.css">
   <!-- Custom Styles -->
   <link rel="stylesheet" href="style.css">
+  <!-- patterns -->
+  <link href="https://unpkg.com/pattern.css" rel="stylesheet">
   <!-- swiper -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 
@@ -459,6 +461,8 @@
     <!-- Testimonios -->
     <!-- Swiper -->
     <div class="swiper mySwiper">
+      <!-- The diagonal area -->
+      <div class="container__diagonal"></div>
       <div class="swiper-wrapper">
 
         <div class="swiper-slide">
