--- a/index.html
+++ b/index.html
@@ -472,7 +472,9 @@
             <h3>Nadia Saballa</h3>
             <i class="fa-solid fa-quote-left"></i>
             <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
-              autem. adipisicing elit. Esse, sapiente!</p>
+              autem. adipisicing elit. Esse, sapiente!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. A, illum! Deleniti ullam voluptatem enim numquam
+              vero, minus consectetur architecto et?</p>
             <div class="swiper-footer">
             </div>
           </div>
@@ -485,7 +487,9 @@
             <h3>Sebastian Gallardo</h3>
             <i class="fa-solid fa-quote-left"></i>
             <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
-              autem. adipisicing elit. Esse, sapiente!</p>
+              autem. adipisicing elit. Esse, sapiente!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi illo odit sequi veritatis minima voluptate
+              doloribus ipsam expedita autem rem!</p>
             <div class="swiper-footer">
             </div>
           </div>
@@ -498,7 +502,9 @@
             <h3>Juan Esteban</h3>
             <i class="fa-solid fa-quote-left"></i>
             <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
-              autem. adipisicing elit. Esse, sapiente!</p>
+              autem. adipisicing elit. Esse, sapiente!
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis nulla placeat consectetur libero porro
+              voluptatum recusandae perferendis nam atque id?</p>
             <div class="swiper-footer">
             </div>
           </div>
