--- a/index.html
+++ b/index.html
@@ -497,9 +497,9 @@
 
         <div class="swiper-slide">
           <div class="swiper-texto">
-            <img src="img/cara.jpg" alt="">
+            <img src="img/angelito.png" alt="">
             <h2>Testimonios 💪</h2>
-            <h3>Juan Esteban</h3>
+            <h3>Angel Sayago</h3>
             <i class="fa-solid fa-quote-left"></i>
             <p>Lorem ipsum dolor sit amet consectetur, Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis,
               autem. adipisicing elit. Esse, sapiente!
