camio de fotos en galeria

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link rel="icon" type="image/png" href="img/logotipo el encuentro.png">
 
   <!-- HTML -->
-
   <!--Fontawesome-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
@@ -70,14 +69,11 @@
         <li class="navbar__link"><a href="#actividades">actividades</a></li>
         <li class="navbar__link"><a href="#galeria">galeria</a></li>
         <li class="navbar__link"><a href="#contacto">contacto</a></li>
-
       </ul>
-
 
       <div class="navbar__menu">
         <i class="fas fa-bars"></i>
       </div>
-
     </nav>
 
     <!--Main (Principal)-->
@@ -91,7 +87,6 @@
         <h4 class="main__tituloSub">Tristán Suárez</h4>
       </div>
 
-
       <div class="main__btn">
         <a href="#rehma">
           <input type="button" value="VER MÁS">
@@ -104,9 +99,7 @@
             class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-youtube "></i></a>
       </div>
-
     </main>
-
 
     <!--boton whatsapp-->
     <a href="https://api.whatsapp.com/send?phone=+51987654321" class="btn__wsp" target="_blank">
@@ -117,7 +110,6 @@
     <button class="btn__scrolltop" id="btn_scrolltop">
       <i class="fas fa-chevron-up"></i>
     </button>
-
 
     <!--Rehma-->
 
@@ -164,9 +156,7 @@
     <!-- Pantalla dividida izquierda -->
     <section class="dividida__left" id="dividida">
       <!-- izquierda -->
-
       <div class="left__textoDos" data-aos="fade-left">
-
         <h2 class="left__titulo--dos">Nosotros</h2>
         <h4 class="left__tituloSub--dos">Tristán Suárez ✋🤚</h4>
         <p class="left__parrafo--dos">
@@ -181,18 +171,14 @@
           Los pastores de nuestra comunidad recibieron la luz, bajo el concepto de la Palabra de Dios, de hacer parte
           del diario vivir de la iglesia, las verdades de la Alianza. Este hecho de Dios con nosotros sería
           escaso si no se extendiera a todos los aspectos de nuestra vida.
-
         </p>
       </div>
-
 
       <!-- contenedor izquierda nosotros -->
       <div class="left__imagen--right">
         <p class="left__frase">¡Bienvenido al lugar de tu encuentro con Dios, gracias por acompañarnos!</p>
       </div>
-
     </section>
-
 
     <!-- Pantalla dividida derecha -->
     <section class="dividida__right" id="dividida">
@@ -205,8 +191,6 @@
 
       <div class="right__textoDos" data-aos="fade-right">
 
-        <!-- <h2 class="right__titulo--dos">Nuestros Pastores</h2>
-        <h4 class="right__tituloSub--dos">Tristán Suárez 👫</h4> -->
         <p class="right__parrafo--dos">
           Dios se ha desbordado en su expresión de amor y lo ha extendido , a la formación de una familia, un cuerpo,
           su iglesia, que nace por mediación de Jesucristo en la nueva alianza (1 P 2, 4-10) y que es el único capaz
@@ -231,14 +215,6 @@
 
     <section class="mision" id="mision">
       <div class="mision__texto">
-        <!-- <svg viewBox="0 0 402 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-          <path fill="rgba(218, 224, 230, 1)"
-            d="M 0 325 L -11.428571462631226 373.4285583496094 L -11.428571462631226 0 L 0 0 Z" stroke-width="0">
-          </path>
-          <path fill="rgba(218, 224, 230, 1)"
-            d="M -12.428571462631226 373.4285583496094 L 402 0 L 402 0 L -12.428571462631226 0 Z" stroke-width="0">
-          </path>
-        </svg> -->
         <h3 class="mision__tituloPre">Somos Iglesia! 👨‍👩‍👧‍👦 </h3>
         <h2 class="mision__titulo">La Visión</h2>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
@@ -535,35 +511,35 @@
 
       <div class="galeria__grid">
         <figure class="galeria__picture galeria__picture--g1">
-          <img src="img/adolescentes.jpg" class="galeria__img">
+          <img src="img/galeriaUno.jpg" class="galeria__img">
         </figure>
 
         <figure class="galeria__picture galeria__picture--g2">
-          <img src="img/Alabanza.jpg" class="galeria__img">
+          <img src="img/galeriaDos.jpg" class="galeria__img">
         </figure>
 
         <figure class="galeria__picture galeria__picture--g3">
-          <img src="img/Pastor2.jpg" class="galeria__img">
+          <img src="img/galeriaTres.jpg" class="galeria__img">
         </figure>
 
         <figure class="galeria__picture galeria__picture--g4">
-          <img src="img/sincerely-media-dGxOgeXAXm8-unsplash.jpg" class="galeria__img">
+          <img src="img/galeriaCuatro.jpg" class="galeria__img">
         </figure>
 
         <figure class="galeria__picture galeria__picture--g5">
-          <img src="img/main.jpg" class="galeria__img">
+          <img src="img/galeriaCinco.jpg" class="galeria__img">
         </figure>
 
         <figure class="galeria__picture galeria__picture--g6">
-          <img src="img/matrimonios.jpg" class="galeria__img">
+          <img src="img/galeriaSeis.jpg" class="galeria__img">
         </figure>
 
         <figure class="galeria__picture galeria__picture--g7">
-          <img src="img/adolescentes.jpg" class="galeria__img">
+          <img src="img/galeriaSiete.jpg" class="galeria__img">
         </figure>
 
         <figure class="galeria__picture galeria__picture--g8">
-          <img src="img/priscilla-du-preez-9CMUPez8wLo-unsplash.jpg" class="galeria__img">
+          <img src="img/galeriaOcho.jpg" class="galeria__img">
         </figure>
       </div>
     </section>
