imagen somos iglesia

--- a/index.html
+++ b/index.html
@@ -254,7 +254,8 @@
         </p>
       </div>
       <div class="mision__imagen">
-        <img src="img/fotos-triangulos.png" alt="">
+        <img src="img/collageNuevo.png" alt="">
+        <h5 class="t-stroke t-shadow">SOMOS IGLESIA</h5>
       </div>
     </section>
 
