scroll margin top

--- a/index.html
+++ b/index.html
@@ -67,9 +67,21 @@
         <li class="navbar__link"><a href="#mision">vision</a></li>
         <li class="navbar__link"><a href="#precursores">multimedia</a></li>
         <li class="navbar__link"><a href="#actividades">actividades</a></li>
+        <li class="navbar__link"><a href="#testimonios">testimonios</a></li>
         <li class="navbar__link"><a href="#galeria">galeria</a></li>
         <li class="navbar__link"><a href="#contacto">contacto</a></li>
       </ul>
+
+      <!--SEGUINOS-->
+
+      <div class="navbar__social">
+        <a href="#" class="fa-brands fa-facebook"></a>
+        <a href="#" class="fa-brands fa-instagram"></a>
+        <a href="#" class="fa-brands fa-youtube"></a>
+
+      </div>
+
+
 
       <div class="navbar__menu">
         <i class="fas fa-bars"></i>
@@ -437,7 +449,7 @@
 
     <!-- Testimonios -->
     <!-- Swiper -->
-    <div class="swiper mySwiper">
+    <div class="swiper mySwiper" id="testimonios">
       <!-- The diagonal area -->
       <div class="container__diagonal"></div>
       <div class="swiper-wrapper">
